--- a/_posts/2018-09-07-一对好基友, 深度优先vs.广度优先.md
+++ b/_posts/2018-09-07-一对好基友, 深度优先vs.广度优先.md
@@ -1,86 +1,106 @@
 ---
 layout: post
-title: "一对好基友，深度优先vs.广度优先"
+title: "一对好基友，深度优先vs.广度优先搜索"
 tags: 算法, BFS, DFS
 ---
 
-# 一对好基友，深度优先vs.广度优先
+# 一对好基友，深度优先vs.广度优先搜索
 
 ##广度优先搜索
 
-BFS是树或者图的遍历策略，该算法(从树的根结点 or 从图的任意节点)出发, 先搜遍所有的邻居节点，然后再拓展到下一层级，
+BFS是图的遍历策略，该算法从某一指定节点出发，先搜遍所有的邻居节点，然后再拓展到下一层级，
 
-如下图，BFS结果是:
+如下图，以树为例，BFS结果是:
 
-[1], [2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]
+```
+[1]
+[2, 3, 4]
+[5, 6, 7, 8]
+[9, 10, 11, 12]
+```
 
-![tree-breadth-first-search]({{site.static}}/images/tree-breadth-first-search.jpg)
+![tree-breadth-first-search](http://geemaple.github.io/images/tree-breadth-first-search.png)
 
 
+##深度优先搜索
 
-深度优先搜索
+DFS图的遍历策略，与BFS策略相反，该算法从某一指定节点出发，先探索尽可能远，然后回溯 
 
-DFS也是树或者图的遍历策略，与BFS策略相反，该算法(从树的根结点 or 从图的任意节点)出发，在回溯之前探索尽可能远
+回溯是指，先遍历[1, 2, 3, 4], 然后4没有更深的节点，然后把4丢掉，退回[1, 2, 3],再把5填到结果中得到[1, 2, 3, 5]，以此类推
 
 如下图：DFS结果是:
 
-[1, 2, 3, 4], [1, 2, 3,5], [1, 2,6], [1,7], [1,8, 9, 10], [1, 8, 9,11], [1, 8 ,12]
-
-
-回溯是指，先遍历[1, 2, 3, 4], 然后4没有更深的节点，然后把4丢掉，退回[1, 2, 3],，再把5填到结果中得到[1, 2, 3, 5]，以此类推
-
-
-
-
-
-
-
-DFS递归实现
-
-def DFS_Recursive(self, root):
-    def DFS_Helper(result, node):
-        #do something
-        result.append(node)
-        for sub in node.children:
-            DFS_Helper(result, sub)
-    result = []
-    DFS_Helper(result, root)
-    return result
-
-
-BFS && DFS非递归实现
-
 ```
-def BFS_NonRecursive(self, root):
-    result = []
-    queue = [root]
-    while(len(queue) > 0):
-        node = queue.pop(0) # line 5 pop first
-        # do something
-        result.append(node)
-        for sub in node.children:
-            queue.append(sub)
-    return result
+[1, 2, 3, 4] pop 4
+[1, 2, 3, 5] pop 5, 3
+[1, 2, 6] pop 6, 2
+[1, 7] pop 7
+[1, 8, 9, 10] pop 10
+[1, 8, 9, 11] pop 11, 9
+[1, 8, 12]
 ```
 
-通常BFS不使用递归来实现，如果你执意如此，就当个思考练习吧
+![tree-breadth-first-search](http://geemaple.github.io/images/tree-depth-first-search.png)
 
+
+## 代码实现
+
+**递归实现:**
+
+DFS
 
 ```
-def DFS_NonRecursive(self, root):
-    result = []
-    queue = [root]
-    while(len(queue) > 0):
-        node = queue.pop() # line 5 pop last
-        # do something
-        result.append(node)
-        for sub in node.children:
-            queue.append(sub)
-    return result
+def __init__(self):
+    val = 0
+    children = []
+
+def search(node):
+    if node is None:
+        return
+
+    print node.val
+
+    for sub in node.children:
+        search(sub)
 ```
 
-如果你仔细观察，非递归版本BFS与DFS只有第5行不一样，BFS使用的是队列, DFS使用的是栈
+**非递归实现:**
 
+DFS
 
+```
+nodes_to_visit = [root]
+
+while( len(nodes_to_visit) > 0 ) {
+
+  	#从尾部取出
+	node = nodes_to_visit.pop()
+
+  	print node.val
+	
+  	for sub in node.children:
+      	nodes_to_visit.append(sub) 
+}
+```
+
+BFS
+
+```
+nodes_to_visit = [root]
+
+while( len(nodes_to_visit) > 0 ) {
+
+  	#从头部取出
+	node = nodes_to_visit.pop(0)
+
+  	print node.val
+	
+  	for sub in node.children:
+  		nodes_to_visit.append(sub) 
+```
+
+如果你仔细观察，非递归版本BFS与DFS是非常对称，只是DFS从尾部取出(Stack)，BFS从头部取出(Queue)
+
+PS：图的搜索遍历一定要记得记得去重, 如果你对代码还不太熟，对着代码，多调试几遍吧～
 
 --END--
