--- a/_posts/2018-09-09-优秀的程序必修之路, 系统设计开篇.md
+++ b/_posts/2018-09-09-优秀的程序必修之路, 系统设计开篇.md
@@ -2,6 +2,7 @@
 layout: post
 title: "优秀的程序必修之路——系统设计开篇"
 tags: 系统设计
+excerpt: 系统设计开篇，什么是系统设计，从哪些角度考虑
 ---
 
 > 曾在创业的时候，公司刚开始做在线直播的消息分发服务，礼物弹幕什么的。当时使用的是Node.js。当时虽然已经调查日活跃暴增的解决的集群方案，但由于不够重视。等到日活跃真的增加的时候，系统撑不住了，客户体验极差。后果也是很严重的，导致业务无法正常运营，因为一旦启动，人上来就撑不住了。本以为集群很简单，但是放在内存里的数据是不能够被多个进程，或者多台机器共享的，前移成本远不是之前想象的一天就能完成的。
