--- a/_posts/2018-09-11-算法必备比较函数cmp.md
+++ b/_posts/2018-09-11-算法必备比较函数cmp.md
@@ -2,6 +2,7 @@
 layout: post
 title: "C++算法排序中常用cmp的三种实现"
 tags: 算法
+excerpt: C++三种常用的cmp方式实现
 ---
 
 当用C++时，我们经常需要对数据进行排序，比如Sort默认是递增(Ascending)序列，但是我们可能恰好需要一个递减(Desceding)序列。
