--- a/_posts/2018-09-07-一对好基友, 深度优先vs.广度优先.md
+++ b/_posts/2018-09-07-一对好基友, 深度优先vs.广度优先.md
@@ -2,7 +2,7 @@
 layout: post
 title: "一对好基友，深度优先vs.广度优先搜索"
 tags: 算法, BFS, DFS
-excerpt: 图的搜索遍历，深度优先与广度优先
+excerpt: "图的搜索遍历，深度优先与广度优先"
 ---
 ##广度优先搜索
 
