--- a/_posts/2020-05-14-二叉树与分治算法.md
+++ b/_posts/2020-05-14-二叉树与分治算法.md
@@ -22,7 +22,7 @@ excerpt: "顾名思义，分而治之"
 2. 中序遍历(左**根**右)
 3. 后续遍历(左右**根**)
 
-具体遍历，参考之前的文章《树的三种DFS策略(前序、中序、后序)遍历》
+具体遍历，参考之前的文章[《树的三种DFS策略(前序、中序、后序)遍历》](http://geemaple.github.io/2018/09/09/树的三种DFS策略(前序-中序-后序)遍历/)
 
 ## 递归思想
 
@@ -172,6 +172,5 @@ def traverse(self, root, results): # 递归的定义
 ## 参考：
 
 《程序语言递归深度》 https://rosettacode.org/wiki/Find_limit_of_recursion
-《树的三种DFS策略(前序、中序、后序)遍历》 http://geemaple.github.io/2018/09/09/树的三种DFS策略(前序-中序-后序)遍历/
 
 --End--
