--- a/_posts/2019-09-01-计算机数学, 开山篇.md
+++ b/_posts/2019-09-01-计算机数学, 开山篇.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "计算机数学, 开山篇"
-tags: Google, 面试题, 数量级
+tags: 数学
 excerpt: "边界与数量级"
 ---
 好的程序员应该是对数量级敏感的一类人，因为这直接影响到程序的效率。服务端有常见的10k问题，即当输入数量级达到10k的级别是，会对程序有着相当大的考验，那么回到本文提到的2^64究竟有多大？
