--- a/_posts/2020-06-16-深度优先搜索算法DFS.md
+++ b/_posts/2020-06-16-深度优先搜索算法DFS.md
@@ -11,13 +11,13 @@ excerpt: "爆破专家"
 
 所以，深度优先搜索，也可称之为回溯算法(Backtracing)
 
-深度优先搜索，通常通过递归来完成，非递归代码，可以使用Stack数据结构
+深度优先搜索，通常通过递归来完成，非递归代码，可以使用Stack数据结构。但非递归代码要难得多，只需掌握树的三种DFS的非递归代码
 
 ## 图的深度优先搜索
 
 对于图的深度优先遍历，一定要记得去重(也就是递归出口)。
 
-> 对于去重用的哈希算法，它的时间复杂度为O(N), 大多数的时候我们认为它的时间复杂度为O(1), 是因为我们假定输入长度在常量范围内。比如最长的单词也只有45个字母, O(45) = O(1)
+> 对于去重使用的哈希算法，它的时间复杂度为O(N), 大多数的时候我们认为它的时间复杂度为O(1), 是因为我们假定输入长度在常量范围内。比如最长的单词也只有45个字母, O(45) = O(1)
 
 ```
 len("pneumonoultramicroscopicsilicovolcanoconiosis") = 45
@@ -57,10 +57,54 @@ for i in range(len(y)):
 
 具体遍历，参考之前的文章[《树的三种DFS策略(前序、中序、后序)遍历》](http://geemaple.github.io/2018/09/09/树的三种DFS策略(前序-中序-后序)遍历/)
 
-TODO:
+### 拓扑排序
+
+这里提一下，如果谷歌"Topological Sort", 靠前面的答案，给的都是DFS解决。
+
+但从实现上，推荐更简单的[《宽度优先搜索算法BFS》](http://geemaple.github.io/2020/05/21/宽度优先搜索算法BFS/)
+
+## 穷举暴力破解
+
+DFS另一个擅长的领域是，排列组合(Permutation/Combination)，也可以说通过穷举所有可能，来达到破解的目的。
+
+常见的标志是，找出*所有(find-all)*的答案。
+
+时间复杂度 = 答案个数 * 构造每个答案的时间, 可以通过预处理，或者剪枝来达到优化的效果， 时间复杂度在N! ~ 2^N级别
+
+### 组合
+
+
+
+### 排列
+
+
+### 子组数 vs. 子序列
+
+子组数(subarray)，子串(substring): 原数组，起点i到终点j*连续的*部分，数量级为N^2
+
+子序列(subsequence): 结果元素相对顺序保持不变, 素组从头开始, 每个元素选择*要or不要*, 数量级为2^N
+
+```
+array = [1,2,3,4]
+
+subarray = [1] [1,2] [1,2,3] [1,2,3,4] [2] [2,3] [2,3,4] [3] [3,4] [4] # 共10 substring是一种特殊的数组
+
+subsequence = [] [1] [2] [3] [4] [1,2] [1,3] [1,4] [2,3] [2,4] [3,4] [1,2,3] [1,2,4] [1,3,4] [2,3,4] [1,2,3,4] //共16个
+```
+
 
 1. 不推荐拓扑排序
 2. 排列+组合(暴力破解)
 
 
 --End--
+
+DFS要比BFS难很多，递归解法要掌握, 非递归就更难了
+
+1. Combination
+2. Permutation
+
+DFS适用：排列+组合 + 暴力破解 + 切割问题
+
+
+如果和前面数字一样，并且前面也没用过，就跳过
