Update. 子标题链接

--- a/_posts/2018-09-11-算法必备比较函数cmp.md
+++ b/_posts/2018-09-11-算法必备比较函数cmp.md
@@ -5,6 +5,9 @@ tags: 算法 C++ 代码
 excerpt: “行走江湖必备，C++三种常用的cmp方式实现”
 ---
 
+* content
+{:toc}
+
 当用C++时，我们经常需要对数据进行排序，比如Sort默认是递增(Ascending)序列，但是我们可能恰好需要一个递减(Desceding)序列。
 
 再比如一些STL容器，例如map，set，priority_queue也是要求内部数据可排序
