--- a/_posts/2018-09-07-一对好基友, 深度优先vs.广度优先.md
+++ b/_posts/2018-09-07-一对好基友, 深度优先vs.广度优先.md
@@ -4,6 +4,10 @@ title: "一对好基友，深度优先vs.广度优先搜索"
 tags: 算法 BFS DFS
 excerpt: "图的搜索遍历，深度优先与广度优先"
 ---
+
+* content
+{:toc}
+
 ##广度优先搜索
 
 BFS是图的遍历策略，该算法从某一指定节点出发，先搜遍所有的邻居节点，然后再拓展到下一层级，
