--- a/_posts/2018-09-09-树的三种DFS策略(前序、中序、后序)遍历.md
+++ b/_posts/2018-09-09-树的三种DFS策略(前序、中序、后序)遍历.md
@@ -5,6 +5,9 @@ tags: 算法 DFS 代码
 excerpt: "树的前序遍历，中序遍历，后序遍历"
 ---
 
+* content
+{:toc}
+
 之前刷leetcode的时候，知道求排列组合都需要深度优先搜索(DFS), 那么前序、中序、后序遍历是什么鬼，一直傻傻的分不清楚。直到后来才知道，原来它们只是DFS的三种不同策略。
 
 N = Node(节点)
