--- a/_posts/leetcode/2020-07-08-leetcode-3.md
+++ b/_posts/leetcode/2020-07-08-leetcode-3.md
@@ -2,7 +2,7 @@
 layout: post
 title: "3. Longest Substring Without Repeating Characters"
 categories: leetcode
-excerpt: "给链表头加一个哨兵, 省去了处理特殊逻辑，生活会简单许多。噢力给～"
+excerpt: "滑动窗口"
 ---
 
 * content
