--- a/_posts/leetcode/2020-07-09-leetcode-4.md
+++ b/_posts/leetcode/2020-07-09-leetcode-4.md
@@ -72,8 +72,8 @@ nums2 = [2, inf, ...]
 示例 2:
 
 ```
-nums1 = [1, 2]
-nums2 = [3, 4]
+nums1 = [1, 2, inf, ...]
+nums2 = [3, 4, inf, ...]
 
 找到第2大的数, (m + n) / 2
 找到第3大的数, (m + n) / 2 + 1
@@ -85,7 +85,7 @@ nums2 = [3, 4]
 
 用nums1, nums2各出```k/2个```数，组成最终的长度为k的数组。
 
-如果```nums1[k/2] < nums2[k/2]```, 那么```nums1[k/2]```不可能成为第k大的数, 同样的k/2左边的数也不可能是。可以排除
+如果```nums1[k/2 - 1] < nums2[k/2 - 1]```, 那么```nums1[k/2 - 1]```不可能成为第k大的数, 同样的(k/2 - 1)左边的数也不可能是。可以排除
 
 如果，有任意数组用完了，那么第k个数，就在另一个数组中。
 
