--- a/_posts/leetcode/2020-07-09-leetcode-4.md
+++ b/_posts/leetcode/2020-07-09-leetcode-4.md
@@ -190,9 +190,9 @@ aaaaaaaaaaaaaaaA1 | A2aaaa
 
 **N个数，有N+1个切割方法:**
 
-0个数只有一种切法: 左右都是空 ``` | ```
+0个数只有一种切法: 左右都是空 ```' | '```
 
-1个数有两种切法: 左边为空，或者右边为空`` |1|`` , 以此类推
+1个数有两种切法: 左边为空，或者右边为空```' |1| '``` , 以此类推
 
 ```
        ｜0 ｜ 1 ｜ 2 ｜ 3 ｜ 4 ｜ 5 ｜
