--- a/_posts/leetcode/2020-07-11-leetcode-6.md
+++ b/_posts/leetcode/2020-07-11-leetcode-6.md
@@ -3,7 +3,7 @@ layout: post
 title: "6. ZigZag Conversion"
 categories: leetcode
 tags: String
-excerpt: "CPU一样的大脑，记不住太多变量"
+excerpt: "归去来，与天杀价净赚三百"
 ---
 
 * content
