Update. 更新标签，简介

--- a/_posts/leetcode/2020-07-14-leetcode-8.md
+++ b/_posts/leetcode/2020-07-14-leetcode-8.md
@@ -2,8 +2,8 @@
 layout: post
 title: "8. String to Integer (atoi)"
 categories: leetcode
-tags: Math
-excerpt: "边界与范围"
+tags: Math String
+excerpt: "哪有什么岁月静好"
 ---
 
 * content
