--- a/_posts/leetcode/2020-07-20-leetcode-13.md
+++ b/_posts/leetcode/2020-07-20-leetcode-13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "13. Integer to Roman"
+title: "13. Roman to Integer"
 categories: leetcode
 tags: String Math
 excerpt: "犹豫就会败北"
