--- a/_posts/leetcode/2020-07-23-leetcode-16.md
+++ b/_posts/leetcode/2020-07-23-leetcode-16.md
@@ -3,7 +3,7 @@ layout: post
 title: "16. 3Sum Closest"
 categories: leetcode
 tags: Array Two-pointers
-excerpt: "三刀流"
+excerpt: "栀子花套房"
 ---
 
 * content
