--- a/_posts/leetcode/2020-07-16-leetcode-10.md
+++ b/_posts/leetcode/2020-07-16-leetcode-10.md
@@ -183,3 +183,7 @@ class Solution:
 ```
 
 --End--
+
+难度爆炸，随便的草稿，不值得细看
+
+![草稿说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-10.png)
