--- a/_posts/leetcode/2020-07-24-leetcode-17.md
+++ b/_posts/leetcode/2020-07-24-leetcode-17.md
@@ -3,7 +3,7 @@ layout: post
 title: "17. Letter Combinations of a Phone Number"
 categories: leetcode
 tags: String Backtracking
-excerpt: ""
+excerpt: "排列组合"
 ---
 
 * content
