--- a/_posts/leetcode/2020-07-16-leetcode-10.md
+++ b/_posts/leetcode/2020-07-16-leetcode-10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "10. Regular Expression Matching"
+title: "10. 正则表达式匹配(Regular Expression Matching)"
 categories: leetcode
 tags: Math Dynamic-programming Backtracking
 excerpt: "心态爆炸之旅"
