--- a/_posts/leetcode/2020-07-18-leetcode-12.md
+++ b/_posts/leetcode/2020-07-18-leetcode-12.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "12. Integer to Roman"
+title: "12. 整数转罗马数字(Integer to Roman)"
 categories: leetcode
 tags: String Math
 excerpt: "自由之翼"
