--- a/_posts/leetcode/2020-07-23-leetcode-16.md
+++ b/_posts/leetcode/2020-07-23-leetcode-16.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "16. 3Sum Closest"
+title: "16. 最接近的三数之和(3Sum Closest)"
 categories: leetcode
 tags: Array Two-pointers
 excerpt: "栀子花套房"
