Update. 更新1-9标题

--- a/_posts/leetcode/2020-07-13-leetcode-7.md
+++ b/_posts/leetcode/2020-07-13-leetcode-7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "7. Reverse Integer"
+title: "7. 整数反转(Reverse Integer)"
 categories: leetcode
 tags: Math
 excerpt: "边界与范围"
