--- a/_posts/leetcode/2020-07-15-leetcode-9.md
+++ b/_posts/leetcode/2020-07-15-leetcode-9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "9. Palindrome Number"
+title: "9. 回文数(Palindrome Number)"
 categories: leetcode
 tags: Math
 excerpt: "?Borrow or rob?"
