--- a/_posts/leetcode/2020-07-08-leetcode-3.md
+++ b/_posts/leetcode/2020-07-08-leetcode-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "3. Longest Substring Without Repeating Characters"
+title: "3. 无重复字符的最长子串(Longest Substring Without Repeating Characters)"
 categories: leetcode
 tags: Hash Two-pointers String Sliding-window
 excerpt: "滑动窗口"
