--- a/_posts/leetcode/2020-07-11-leetcode-6.md
+++ b/_posts/leetcode/2020-07-11-leetcode-6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "6. ZigZag Conversion"
+title: "6. Z 字形变换(ZigZag Conversion)"
 categories: leetcode
 tags: String
 excerpt: "归去来，与天杀价净赚三百"
