--- a/_posts/leetcode/2020-07-07-leetcode-2.md
+++ b/_posts/leetcode/2020-07-07-leetcode-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "2. 两数相加(Add Two Numbers)"
-categories: leetcode
+categories: Leetcode
 tags: Linked-list
 excerpt: "给链表头加一个哨兵, 省去了处理特殊逻辑，生活会简单许多。噢力给～"
 ---
