--- a/_posts/leetcode/2020-07-09-leetcode-4.md
+++ b/_posts/leetcode/2020-07-09-leetcode-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "4. 寻找两个正序数组的中位数(Median of Two Sorted Arrays)"
-categories: leetcode
+categories: Leetcode
 tags: Array Binary-search Divide-and-conquer
 excerpt: "我变秃了也变强了"
 ---
