--- a/_posts/leetcode/2020-07-10-leetcode-5.md
+++ b/_posts/leetcode/2020-07-10-leetcode-5.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "5. 最长回文子串(Longest Palindromic Substring)"
-categories: leetcode
+categories: Leetcode
 tags: String Dynamic-programming
 excerpt: "Your shine is something like a mirror"
 ---
