--- a/_posts/leetcode/2020-07-11-leetcode-6.md
+++ b/_posts/leetcode/2020-07-11-leetcode-6.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "6. Z 字形变换(ZigZag Conversion)"
-categories: leetcode
+categories: Leetcode
 tags: String
 excerpt: "归去来，与天杀价净赚三百"
 ---
