--- a/_posts/leetcode/2020-07-16-leetcode-10.md
+++ b/_posts/leetcode/2020-07-16-leetcode-10.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "10. 正则表达式匹配(Regular Expression Matching)"
-categories: leetcode
+categories: Leetcode
 tags: Math Dynamic-programming Backtracking
 excerpt: "心态爆炸之旅"
 ---
