--- a/_posts/leetcode/2020-07-17-leetcode-11.md
+++ b/_posts/leetcode/2020-07-17-leetcode-11.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "11. 盛最多水的容器(Container With Most Water)"
-categories: leetcode
+categories: Leetcode
 tags: Array Two-pointers
 excerpt: "班达米尔湖"
 ---
