--- a/_posts/leetcode/2020-07-18-leetcode-12.md
+++ b/_posts/leetcode/2020-07-18-leetcode-12.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "12. 整数转罗马数字(Integer to Roman)"
-categories: leetcode
+categories: Leetcode
 tags: String Math
 excerpt: "自由之翼"
 ---
