--- a/_posts/leetcode/2020-07-20-leetcode-13.md
+++ b/_posts/leetcode/2020-07-20-leetcode-13.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "13. 罗马数字转整数(Roman to Integer)"
-categories: leetcode
+categories: Leetcode
 tags: String Math
 excerpt: "犹豫就会败北"
 ---
