--- a/_posts/leetcode/2020-07-21-leetcode-14.md
+++ b/_posts/leetcode/2020-07-21-leetcode-14.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "14. 最长公共前缀(Longest Common Prefix)"
-categories: leetcode
+categories: Leetcode
 tags: String
 excerpt: "多远都无畏"
 ---
