--- a/_posts/leetcode/2020-07-23-leetcode-16.md
+++ b/_posts/leetcode/2020-07-23-leetcode-16.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "16. 最接近的三数之和(3Sum Closest)"
-categories: leetcode
+categories: Leetcode
 tags: Array Two-pointers
 excerpt: "栀子花套房"
 ---
