--- a/_posts/leetcode/2020-07-26-leetcode-18.md
+++ b/_posts/leetcode/2020-07-26-leetcode-18.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "18. 四数之和(4Sum)"
-categories: leetcode
+categories: Leetcode
 tags: Array Hash Two-pointers
 excerpt: "K-Sum终结者"
 ---
