--- a/_posts/leetcode/2020-07-14-leetcode-8.md
+++ b/_posts/leetcode/2020-07-14-leetcode-8.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "8. 字符串转换整数(String to Integer)(atoi)"
-categories: leetcode
+categories: Leetcode
 tags: Math String
 excerpt: "哪有什么岁月静好"
 ---
