--- a/_posts/leetcode/2020-07-22-leetcode-15.md
+++ b/_posts/leetcode/2020-07-22-leetcode-15.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "15. 三数之和(3Sum)"
-categories: leetcode
+categories: Leetcode
 tags: Array Two-pointers
 excerpt: "三刀流"
 ---
