--- a/_posts/leetcode/2020-07-24-leetcode-17.md
+++ b/_posts/leetcode/2020-07-24-leetcode-17.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "17. 电话号码的字母组合(Letter Combinations of a Phone Number)"
-categories: leetcode
+categories: Leetcode
 tags: String Backtracking
 excerpt: "排列组合"
 ---
