--- a/_posts/leetcode/2020-07-30-leetcode-22.md
+++ b/_posts/leetcode/2020-07-30-leetcode-22.md
@@ -44,7 +44,7 @@ O(2^N)
 
 ...
 
-![图片说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-22.jpeg)
+![图片说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-22.jpg)
 
 ```python
 class Solution:
