Fix. 错误的标签

--- a/_posts/leetcode/2020-07-31-leetcode-23.md
+++ b/_posts/leetcode/2020-07-31-leetcode-23.md
@@ -2,7 +2,7 @@
 layout: post
 title: "23. 合并K个排序链表(Merge k Sorted Lists)"
 categories: Leetcode
-tags: Lined-list Heap Divide-and-conquer
+tags: Linked-list Heap Divide-and-conquer
 excerpt: "蜗牛与雄鹰"
 ---
 
