--- a/_posts/leetcode/2020-08-01-leetcode-24.md
+++ b/_posts/leetcode/2020-08-01-leetcode-24.md
@@ -2,7 +2,7 @@
 layout: post
 title: "24. 两两交换链表中的节点(Swap Nodes in Pairs)"
 categories: Leetcode
-tags: Lined-list
+tags: Linked-list
 excerpt: "早安八月"
 ---
 
