--- a/_posts/leetcode/2020-08-06-leetcode-28.md
+++ b/_posts/leetcode/2020-08-06-leetcode-28.md
@@ -46,6 +46,8 @@ ABCDEFG    ->    ABCDEFG    ->    ABCDEFG    ->    ABCDEFG
 DEF               DEF               DEF               DEF
 ```
 
+代码如下:
+
 ```python
 class Solution:
     def strStr(self, haystack: str, needle: str) -> int:
