--- a/_posts/leetcode/2020-08-16-leetcode-32.md
+++ b/_posts/leetcode/2020-08-16-leetcode-32.md
@@ -135,18 +135,31 @@ class Solution:
 
 ## 栈
 
-对于上述两遍扫描，可以用一个变量来**match**来存储**left+right**括号的比较情况, match其实就是一个特殊的栈, 
+O(N)
 
-真正的栈包含更多的存储信息，可以解决上述corner case:
+对于上述两遍扫描，可以用一个变量来**match**来存储**left+right**括号的比较情况, match其实就是一个简化版本的栈, 
 
-首先: 栈可以消除最近匹配的两个括号'()'
+完整版的栈包含更多的存储信息，可以解决上述corner case:
 
-其次: 在栈底部，留一个哨兵**index = -1**，用来计算开始start字符
+首先: 栈可以消除最临近匹配的两个括号'()'，
 
-最后: 每一个多余的左括号'('的下标, 或者栈为空右括号')'的下标，都成了新的哨兵
+其次: 没有匹配的字符串作为答案的边界, 可以计算答案的长度
+
+最后: 用上哨兵节点**-1**，代码写起来简单很多
+
+### 栈的消消乐
+
+栈的思路是，如果匹配的括号在一起消失了, 那么它的左右边界还在，就可以计算长度
+
+```
+LLLLLLL         RRRRRRR
+       |  匹配  |
+```
+
+留一个哨兵**index = -1**，每一个多余的左括号'('的下标, 或者栈为空右括号')'的下标，都成了新的哨兵
 
 ```python
-class Solution:
+class Solution1:
     def longestValidParentheses(self, s: str) -> int:
         
         res = 0
@@ -164,12 +177,89 @@ class Solution:
                         res = i - stack[-1]
                     
         return res
+
+class Solution2:
+    def longestValidParentheses(self, s: str) -> int:
+        
+        res = 0
+        stack = [-1]
+        
+        for i in range(len(s)):
+            top = stack[-1]
+            if top != -1 and s[i] == ')' and s[top] == '(':
+                stack.pop()
+                if i - stack[-1] > res:
+                    res = i - stack[-1]
+            else:
+                stack.append(i)
+            
+        return res
 ```
 
 ## 动态规划
 
-// TBD，太难了，学不动了
+### 计算公式
 
+定义以dp[i]为以i结尾的最长匹配字符串(包含i) 
+
+```
+# 1. 如果s[i] == '('
+
+dp[i] = 0, 以'('结尾，不可能是答案
+
+# 2. 如果s[i] == ')' and s[i - 1] == '('
+
+S S S S S S S S S S S X X X X X X X（ )
+                                      i
+             x部分  =  | dp[i - 2] |
+
+dp[i] = dp[i - 2] + 2 以'()'结尾
+
+# 3. 如果s[i] == ')' and s[i - 1] == ')'
+
+其中s[j] == '(‘, j = i - dp[i - 1] - 1
+
+S S S S S S S S S S ( X X X X X X X ) )
+                                      i
+                    j                  
+       x部分+右括号  =  |  dp[i - 1]  |
+|    dp[j - 1]    |
+
+dp[i] = dp[j - 1] + dp[i - 1] + 2
+```
+
+### 边界条件
+
+注意下标越界判断
+
+### 初始条件
+
+dp[0] = 0
+
+
+代码如下：
+```python
+class Solution:
+    def longestValidParentheses(self, s: str) -> int:
+        
+        if len(s) == 0:
+            return 0
+        
+        dp = [0 for i in range(len(s))]
+        
+        for i in range(1, len(s)):
+            if s[i] == ')':
+                if s[i - 1] == '(':
+                    dp[i] = dp[i - 2] + 2 if i -2 >= 0 else 2
+                else:
+                    j = i - dp[i - 1] - 1
+                    if j >= 0 and s[j] == '(':
+                        dp[i] = dp[i - 1] + 2
+                        if j >= 1:
+                            dp[i] += dp[j - 1]
+                    
+        return max(dp)
+```
 
 --End--
 
