--- a/_posts/leetcode/2020-08-16-leetcode-32.md
+++ b/_posts/leetcode/2020-08-16-leetcode-32.md
@@ -2,7 +2,7 @@
 layout: post
 title: "32. 最长有效括号(Longest Valid Parentheses)"
 categories: Leetcode
-tags: String Dynamic-programming
+tags: String Dynamic-programming Stack
 excerpt: ""
 ---
 
@@ -77,7 +77,7 @@ class Solution:
 
 ## 两遍扫描
 
-以')()())'为例，图解一下上述优化的暴力破解的过程
+以```)()())```为例，图解一下上述优化的暴力破解的过程
 
 ```                            
  )    (    )    (    )    )
@@ -137,7 +137,7 @@ class Solution:
 
 O(N)
 
-对于上述两遍扫描，可以用一个变量来**match**来存储**left+right**括号的比较情况, match其实就是一个简化版本的栈, 
+对于上述两遍扫描，可以用一个变量来**match**来存储左右括号的比较情况, match其实就是一个简化版本的栈, 
 
 完整版的栈包含更多的存储信息，可以解决上述corner case:
 
@@ -145,21 +145,21 @@ O(N)
 
 其次: 没有匹配的字符串作为答案的边界, 可以计算答案的长度
 
-最后: 用上哨兵节点**-1**，代码写起来简单很多
+最后: 用上哨兵节点, 代码写起来简单很多
 
 ### 栈的消消乐
-
-栈的思路是，如果匹配的括号在一起消失了, 那么它的左右边界还在，就可以计算长度
 
 ```
 LLLLLLL         RRRRRRR
        |  匹配  |
 ```
 
+栈的思路是，如果匹配的括号在一起消失了, 那么它的左右边界还在，就可以计算长度
+
 留一个哨兵**index = -1**，每一个多余的左括号'('的下标, 或者栈为空右括号')'的下标，都成了新的哨兵
 
 ```python
-class Solution1:
+class Solution:
     def longestValidParentheses(self, s: str) -> int:
         
         res = 0
@@ -178,7 +178,7 @@ class Solution1:
                     
         return res
 
-class Solution2:
+class Solution:
     def longestValidParentheses(self, s: str) -> int:
         
         res = 0
@@ -217,15 +217,15 @@ S S S S S S S S S S S X X X X X X X ( )
 
 dp[i] = dp[i - 2] + 2 以'()'结尾
 
-# 3. 如果s[i] == ')' and s[i - 1] == ')'
+# 3. 如果s[i] == ')' 且 s[i - 1] == ')' 且 s[j] == '(‘
 
-其中s[j] == '(‘, j = i - dp[i - 1] - 1
+其中, j = i - dp[i - 1] - 1
 
 S S S S S S S S S S ( X X X X X X X ) )
                                       i
                     j                  
        x部分+右括号  =  |  dp[i - 1]  |
-|    dp[j - 1]    |
+|    dp[j - 1]    |  s[j]左侧部分
 
 dp[i] = dp[j - 1] + dp[i - 1] + 2
 ```
