update 力扣 32 part4

--- a/_posts/leetcode/2020-08-16-leetcode-32.md
+++ b/_posts/leetcode/2020-08-16-leetcode-32.md
@@ -2,8 +2,8 @@
 layout: post
 title: "32. 最长有效括号(Longest Valid Parentheses)"
 categories: Leetcode
-tags: String Dynamic-programming Stack
-excerpt: ""
+tags: String Dynamic-programming
+excerpt: "It's Ok"
 ---
 
 * content
