--- a/_posts/leetcode/2020-08-16-leetcode-32.md
+++ b/_posts/leetcode/2020-08-16-leetcode-32.md
@@ -77,6 +77,8 @@ class Solution:
 
 ## 两遍扫描
 
+O(N)
+
 以```)()())```为例，图解一下上述优化的暴力破解的过程
 
 ```                            
@@ -156,7 +158,7 @@ LLLLLLL         RRRRRRR
 
 栈的思路是，如果匹配的括号在一起消失了, 那么它的左右边界还在，就可以计算长度
 
-留一个哨兵**index = -1**，每一个多余的左括号'('的下标, 或者栈为空右括号')'的下标，都成了新的哨兵
+留一个哨兵**index = -1**，每一个多余的左括号'('的下标, 或者栈为空时右括号')'的下标，都成了新的哨兵
 
 ```python
 class Solution:
