--- a/_posts/leetcode/2020-08-22-leetcode-37.md
+++ b/_posts/leetcode/2020-08-22-leetcode-37.md
@@ -2,7 +2,7 @@
 layout: post
 title: "37. 解数独(Sudoku Solver)"
 categories: Leetcode
-tags: Hash-table
+tags: Hash-table Backtracking
 excerpt: ""
 ---
 
