--- a/_posts/leetcode/2020-08-21-leetcode-36.md
+++ b/_posts/leetcode/2020-08-21-leetcode-36.md
@@ -3,7 +3,7 @@ layout: post
 title: "36. 有效的数独(Valid Sudoku)"
 categories: Leetcode
 tags: Hash-table
-excerpt: ""
+excerpt: "第一次世界大战"
 ---
 
 * content
@@ -68,8 +68,55 @@ excerpt: ""
 给定数独序列只包含数字 1-9 和字符 '.' 。
 给定数独永远是 9x9 形式的。
 
-## 待定
-// TBD
+## 哈希
+
+O(N^2)
+
+分别用row, col, zone来代表行，列，每9宫格里面的数字
+
+```
+row[i][j] = True, 代表第i+1行数字j出现过
+col[i][j] = True, 代表第i+1列数字j出现过
+zone[i][j] = True, 代表第i+1九宫格数字j出现过
+```
+
+### P=NP?
+
+> 大O表示法，表示的是算法时间复杂度的渐近上限; P是一类问题的集合，NP是一类问题的集合
+
+P类问题(Polynomial)，确定多项式时间问题，是可以通过计算机快速解决的问题，也就是说在**多项式级别**时间复杂度解决的问题，比如O(1), O(logN), O(N), O(N*logN), O(N^2), O(N^3) ...
+
+NP类问题(Nondeterministic Polynomial), **非确定**多项式时间, 问题的答案能够在多项式时间内验证是否正确。很明显P属于NP。NP类问题求解通常是O(2^N), O(N!) ...
+
+![草稿说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-36.png)
+
+P=NP？是计算机领域诞生出的一个数学问题，科研普遍相信P=NP是成立的，但目前没有办法证明成立/不成立，这还是千禧年七大未解数学难题之一
+
+数独，是一个典型的NP问题，验证一个答案的时间复杂度是O(N^2), 求解数独的复杂度却是O(9^N), N = row * col, 如果N过大，那么相对于计算机来说不可解
+
+```python
+class Solution:
+    def isValidSudoku(self, board: List[List[str]]) -> bool:
+        
+        n = len(board)
+        row = [[False for j in range(n)] for i in range(n)]
+        col = [[False for j in range(n)] for i in range(n)]
+        zone = [[False for j in range(n)] for i in range(n)]
+        
+        for i in range(n):
+            for j in range(n):
+                if board[i][j] == '.':
+                    continue
+                   
+                z = (i // 3 * 3) + j // 3
+                number = int(board[i][j]) - 1
+                if row[i][number] or col[j][number] or zone[z][number]:
+                    return False
+                
+                row[i][number] = col[j][number] = zone[z][number] = True
+                
+        return True
+```
 
 --End--
 
