--- a/_posts/leetcode/2020-08-21-leetcode-36.md
+++ b/_posts/leetcode/2020-08-21-leetcode-36.md
@@ -3,7 +3,7 @@ layout: post
 title: "36. 有效的数独(Valid Sudoku)"
 categories: Leetcode
 tags: Hash-table
-excerpt: "第一次世界大战"
+excerpt: "1914 WWI"
 ---
 
 * content
@@ -75,9 +75,9 @@ O(N^2)
 分别用row, col, zone来代表行，列，每9宫格里面的数字
 
 ```
-row[i][j] = True, 代表第i+1行数字j出现过
-col[i][j] = True, 代表第i+1列数字j出现过
-zone[i][j] = True, 代表第i+1九宫格数字j出现过
+row[i][j] = True, 代表第i+1行数字j-1出现过
+col[i][j] = True, 代表第i+1列数字j-1出现过
+zone[i][j] = True, 代表第i+1九宫格数字j-1出现过
 ```
 
 ### P=NP?
