--- a/_posts/leetcode/2020-08-27-leetcode-38.md
+++ b/_posts/leetcode/2020-08-27-leetcode-38.md
@@ -3,7 +3,7 @@ layout: post
 title: "38. 外观数列(Count and Say)"
 categories: Leetcode
 tags: String
-excerpt: "原始积累"
+excerpt: "This is water"
 ---
 
 * content
@@ -23,15 +23,13 @@ excerpt: "原始积累"
 4. 1211
 5. 111221
 
-第一项是数字 1
-
-描述前一项，这个数是 1 即 “一个 1 ”，记作 11
-
-描述前一项，这个数是 11 即 “两个 1 ” ，记作 21
-
-描述前一项，这个数是 21 即 “一个 2 一个 1 ” ，记作 1211
-
-描述前一项，这个数是 1211 即 “一个 1 一个 2 两个 1 ” ，记作 111221
+```
+第一项, 是数字1
+第二项, 描述1st, 有1个1, 写成11
+第三项, 描述2nd, 有2个1, 写成21
+第四项, 描述3rd, 有1个2 + 1个1, 写成1211
+第五项, 描述4th, 有1个1 + 1个2 + 2个1, 写成111221
+```
 
 示例 1:
 
@@ -51,16 +49,7 @@ excerpt: "原始积累"
 
 ## 模拟法
 
-解释下题意，第**N**个数是对第**N - 1**个数的外观描述。
-
-```
-1. 1        #基础数字
-2. 11       #描述1st, 有1个1
-3. 21       #描述2nd, 有2个1
-4. 1211     #描述3rd, 有1个2 + 1个1
-5. 111221   #描述4th, 有1个1 + 1个2 + 2个1
-...
-```
+第**N**个数是对第**N - 1**个数的外观描述。
 
 代码如下:
 
@@ -86,10 +75,6 @@ class Solution:
             
         return ans
 ```
-
-## 其他
-
-
 
 --End--
 
