--- a/_posts/leetcode/2020-09-05-leetcode-44.md
+++ b/_posts/leetcode/2020-09-05-leetcode-44.md
@@ -163,9 +163,61 @@ class Solution:
         return dp[m][n]
 ```
 
+## 贪心 + DFS
+
+O(M * N)
+
+start记录上一个'*'的位置
+
+match记录下一个该匹配字符的起始位置
+
+1. 该算法还是挺快的，若不是遇到相等或者'?'的情况，'*'会尽可能匹配更多的字符
+2. 一旦发现后面不能匹配, 回到记录点, 重复上述步骤
+
+![草稿说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-44.jpg)
+
+如上图第一排，相匹配的用线划掉, 直到i和j无法匹配, i和j回到上次*匹配点, 尝试匹配更多字符
+
+图中第二排, *尝试匹配了两个字符之后，才继续后续判断
+
+## 最坏情况如下:
+
+```
+s ="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" to match p ="*aaaaaab"
+                                                       ^
+                                            尝试匹配0, 1, 2, 3 ...个a
+```
+
+代码如下:
+
+```python
+class Solution:
+    def isMatch(self, s: str, p: str) -> bool:
+    
+        i = j = 0
+        match = start = -1
+        
+        while i < len(s):
+            if j < len(p) and (s[i] == p[j] or p[j] == '?'):
+                i += 1
+                j += 1
+                
+            elif j < len(p) and p[j] == '*':
+                start = j
+                match = i
+
+                j += 1
+            elif start != -1:
+                j = start + 1
+                match += 1
+                i = match
+            else:
+                return False
+                
+        while (j < len(p) and p[j] == '*'):
+            j += 1
+            
+        return j == len(p)
+```
+
 --End--
-
-求更多解法，复杂度小于dp，或者贪心可解，简洁更重要
-
-I am echoing like a whale asking for help!!!​
-
