--- a/_posts/leetcode/2020-09-05-leetcode-44.md
+++ b/_posts/leetcode/2020-09-05-leetcode-44.md
@@ -3,7 +3,7 @@ layout: post
 title: "44. 通配符匹配(Wildcard Matching)"
 categories: Leetcode
 tags: String Dynamic-programming Backtracking Greedy
-excerpt: "鲸鱼回响"
+excerpt: "镇魂街"
 ---
 
 * content
@@ -183,9 +183,9 @@ match记录下一个该匹配字符的起始位置
 ## 最坏情况如下:
 
 ```
-s ="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" to match p ="*aaaaaab"
-                                                       ^
-                                            尝试匹配0, 1, 2, 3 ...个a
+s ="aaaaaaaaaaaaaaaaaaaaaa" to match p ="*aaaaaab"
+                                         ^
+                           尝试匹配0, 1, 2, 3 ...个a
 ```
 
 代码如下:
