--- a/_posts/leetcode/2020-09-09-leetcode-45.md
+++ b/_posts/leetcode/2020-09-09-leetcode-45.md
@@ -3,7 +3,7 @@ layout: post
 title: "45. 跳跃游戏 II(Jump Game II)"
 categories: Leetcode
 tags: Array Greedy
-excerpt: ""
+excerpt: "风之旅人"
 ---
 
 * content
