--- a/_posts/leetcode/2020-09-10-leetcode-46.md
+++ b/_posts/leetcode/2020-09-10-leetcode-46.md
@@ -3,7 +3,7 @@ layout: post
 title: "46. 全排列(Permutations)"
 categories: Leetcode
 tags: Backtracking
-excerpt: ""
+excerpt: "Flutter"
 ---
 
 * content
