Update 力扣 50 审稿

--- a/_posts/leetcode/2020-09-15-leetcode-50.md
+++ b/_posts/leetcode/2020-09-15-leetcode-50.md
@@ -39,7 +39,7 @@ excerpt: "苹果新品发布会"
 
 -100.0 < x < 100.0
 
-n 是 32 位有符号整数，其数值范围是 [−231, 231 − 1] 。
+n 是 32 位有符号整数，其数值范围是 [−2^31, 2^31 − 1] 。
 
 ## 暴力破解
 
@@ -118,7 +118,7 @@ class Solution:
 1        0        1        0    # 10的二进制表示
 4th      3rd      2nd      1st  # 递归方向⬅️, 每次去掉末尾的一位
 
-2^8      2^3      2^2      2^1  # tmp在参与计算时的值
+2^8      2^4      2^2      2^1  # tmp在参与计算时的值
 
 把二进制奇数部分相加2^8 + 2^2 = 2^10
 ```
@@ -185,8 +185,6 @@ class Solution:
 
         return res if (n > 0) else 1 / res
 ```
-
-## 其他
 
 --End--
 
