--- a/_posts/leetcode/2020-09-16-leetcode-51.md
+++ b/_posts/leetcode/2020-09-16-leetcode-51.md
@@ -2,7 +2,7 @@
 layout: post
 title: "51. N 皇后(N-Queens)"
 categories: Leetcode
-tags: Math Binary-search
+tags: Backtracking
 excerpt: "1/3"
 ---
 
