Update 力扣 52 审稿

--- a/_posts/leetcode/2020-09-17-leetcode-52.md
+++ b/_posts/leetcode/2020-09-17-leetcode-52.md
@@ -3,7 +3,7 @@ layout: post
 title: "52. N皇后 II(N-Queens II)"
 categories: Leetcode
 tags: Backtracking
-excerpt: ""
+excerpt: "sun鸽"
 ---
 
 * content
