--- a/_posts/leetcode/2020-09-16-leetcode-51.md
+++ b/_posts/leetcode/2020-09-16-leetcode-51.md
@@ -52,7 +52,7 @@ O(N!)
 
 如果按照水平排递增，就不用考虑同一排会攻击的情况
 
-那么只要考虑'|', '\\', '/'三种情况, 其中垂直是非常好判断的，只要不在同一列就行
+那么只要考虑(__|__ __\\__, __/__)三种情况, 其中垂直是非常好判断的，只要不在同一列就行
 
 '\\'方向, **x坐标 - y坐标**的值是一样的
 
