--- a/_posts/leetcode/2020-09-17-leetcode-52.md
+++ b/_posts/leetcode/2020-09-17-leetcode-52.md
@@ -108,7 +108,8 @@ class Solution:
 ```
 
 耗时测试如下：
-```
+
+```python
 from typing import List
 from collections import Counter
 from time import time
