--- a/_posts/leetcode/2020-09-14-leetcode-49.md
+++ b/_posts/leetcode/2020-09-14-leetcode-49.md
@@ -3,7 +3,7 @@ layout: post
 title: "49. 字母异位词分组(Group Anagrams)"
 categories: Leetcode
 tags: String Hash-table
-excerpt: "B计划"
+excerpt: "B计划"
 ---
 
 * content
