--- a/_posts/leetcode/2020-09-18-leetcode-53.md
+++ b/_posts/leetcode/2020-09-18-leetcode-53.md
@@ -3,11 +3,13 @@ layout: post
 title: "53. 最大子序和(Maximum Subarray)"
 categories: Leetcode
 tags: Array Dynamic-programming Divide-and-conquer
-excerpt: ""
+excerpt: "和平，土地，面包"
 ---
 
 * content
 {:toc}
+
+> 这是一道很好的动态规划入门题目
 
 ## 53. Maximum Subarray
 
@@ -27,7 +29,9 @@ excerpt: ""
 
 ## 暴力破解
 
-子数组数量级是O(N^2)个, 每一个分别求和, 从这些找到满足条件的即可
+O(N^3)
+
+子数组数量级是O(N^2)个, 每一个分别求和O(N), 从这些找到满足条件的即可
 
 ### 子数组
 
@@ -41,7 +45,9 @@ i = 2, j =       3, ... n             (n - 3)
 i = n-1, j = n                              1
 ```
 
-### 前缀和优化
+## 前缀和
+
+O(N)
 
 ```
 sumTo[i]代表前i个元素的总和, 其中sumTo[0] = 0
@@ -49,6 +55,25 @@ sumTo[i]代表前i个元素的总和, 其中sumTo[0] = 0
 sumTo[i] = sumTo[0] + sumTo[1] + ... + sumTo[i - 1]
 
 a[i : j) = sumTo[j] - sumTo[i]
+```
+
+如果当前和 - **前面计算过**最小的那个, 也可以得出答案
+
+可以尝试画一条前缀和的函数曲线
+
+```python
+class Solution:
+    def maxSubArray(self, nums: List[int]) -> int:
+        largest = float('-inf')
+        smallest = 0
+        sumTo = 0
+
+        for num in nums:
+            sumTo += num
+            largest = max(largest, sumTo - smallest)
+            smallest = min(smallest, sumTo)
+
+        return largest
 ```
 
 ## 动态规划
@@ -89,7 +114,7 @@ class Solution:
         return max(dp)
 ```
 
-### 路径压缩
+### 空间压缩
 
 O(1)空间复杂度
 
@@ -109,7 +134,7 @@ class Solution:
 
 ### One More Thing
 
-路径压缩中的上述代码, 演变如下:
+空间压缩中的上述代码, 演变如下:
 
 新的代码有个更直观的解释，依次加入新的元素，如果出现负数，那么就抛弃之前的和
 
@@ -134,19 +159,70 @@ class Solution:
         sumTo = 0
         # for循环从下标0开始
         for i in range(len(nums)):
+            if sumTo < 0:
+                sumTo = 0
+
             sumTo += nums[i]
             if sumTo > largest:
                 largest = sumTo
-                
+            
+        return largest
+
+class Solution:
+    def maxSubArray(self, nums: List[int]) -> int:
+        largest = float('-inf')
+        sumTo = 0
+        
+        for i in range(len(nums)):
+            sumTo += nums[i]
+            if sumTo > largest:
+                largest = sumTo
+
+            # 第一次sum肯定不小于0, 可以挪到末尾
             if sumTo < 0:
                 sumTo = 0
-        
+            
         return largest
 ```
 
 ## 分治法
 
-TBD
+O(N)
+
+分治法把数组nums，分成两半:
+
+1. 如果答案在左边**or**右边，继续分割即可
+2. 如果答案横跨左右两边，那要算出左边的连接部分 + 分割点 + 右边的连接部分
+
+```python
+class Solution:
+    def maxSubArray(self, nums: List[int]) -> int:
+        return self.divideAndConquer(nums, 0, len(nums) - 1)
+
+    def divideAndConquer(self, nums: List[int], left: int, right: int) -> None:
+
+        if left > right:
+            return float('-inf')
+
+        mid = left + (right - left) // 2
+        left_max = self.divideAndConquer(nums, left, mid - 1)
+        right_max = self.divideAndConquer(nums, mid + 1, right)
+
+        total = 0
+        connect_left_max = 0
+        for i in range(left, mid)[::-1]:  # 从mid - 1到left
+            total += nums[i]
+            connect_left_max = max(total, connect_left_max)
+
+        total = 0
+        connect_right_max = 0
+        for i in range(mid + 1, right + 1): #从mid + 1到right
+            total += nums[i]
+            connect_right_max = max(total, connect_right_max)
+
+        # 返回[左边, 右边, 左边+mid+右边]最大的那个
+        return max([left_max, right_max, connect_left_max + nums[mid] + connect_right_max])
+```
 
 --End--
 
