--- a/_posts/leetcode/2020-09-24-leetcode-55.md
+++ b/_posts/leetcode/2020-09-24-leetcode-55.md
@@ -37,7 +37,7 @@ excerpt: "跳出____"
 
 O(N)
 
-> 贪心除了经典的题目, 一般很少碰到, 贪心的难点是如何正平贪心的解法是正确的, 通常我们**举一个反例**来反驳它
+> 贪心除了经典的题目, 一般很少碰到, 贪心的难点是如何证明贪心的解法是正确的, 通常我们**举一个反例**来反驳它
 
 以 **[2, 3,  1,  1,  4]** 为例:
 
@@ -73,6 +73,23 @@ class Solution:
 
         return step >= len(nums) - 1
 ```
+
+查看每个位置，最远能跳到多远，直到i > farthest时， 说明不可达
+
+```python
+class Solution:
+    def canJump(self, nums: List[int]) -> bool:
+        
+        farthest = 0
+    
+        for i in range(len(nums)):
+            if i > farthest:
+                return False
+            farthest = max(farthest, i + nums[i])
+            
+        return True
+```
+
 
 --End--
 
