--- a/_posts/leetcode/2020-09-24-leetcode-56.md
+++ b/_posts/leetcode/2020-09-24-leetcode-56.md
@@ -3,7 +3,7 @@ layout: post
 title: "56. 合并区间(Merge Intervals)"
 categories: Leetcode
 tags: Array Sort
-excerpt: ""
+excerpt: "等待____"
 ---
 
 * content
