--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-59. Spiral Matrix II"
+title: "59. 螺旋矩阵 II(Spiral Matrix II)"
 categories: Leetcode
 tags: Array
 excerpt: "Respect"
@@ -13,7 +13,7 @@ excerpt: "Respect"
 
 > 三里屯苹果店导购员和他的工作搭档
 
-## 59. 螺旋矩阵 II
+## 59. Spiral Matrix II
 
 给定一个正整数 n，生成一个包含 1 到 n2 所有元素，且元素按顺时针顺序螺旋排列的正方形矩阵。
 
