--- a/_posts/leetcode/2020-09-27-leetcode-59.md
+++ b/_posts/leetcode/2020-09-27-leetcode-59.md
@@ -11,7 +11,7 @@ excerpt: "Respect"
 
 ![草稿说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-59.png)
 
-> 三里屯苹果店导购员和他的工作搭档
+*三里屯Apple导购员和他的工作搭档, Respect!!!​*
 
 ## 59. 螺旋矩阵 II
 
