--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -1,110 +1,89 @@
 ---
 layout: post
-title: "59. 螺旋矩阵 II(Spiral Matrix II)"
+title: "力扣LeetCode-60. 第k个排列(Permutation Sequence)"
 categories: Leetcode
-tags: Array
+tags: Math Backtracking
 excerpt: "Respect"
 ---
 
 * content
 {:toc}
 
-![草稿说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-59.png)
+给出集合 [1,2,3,…,n]，其所有元素共有 n! 种排列。
 
-> 三里屯苹果店导购员和他的工作搭档
-
-## 59. Spiral Matrix II
-
-给定一个正整数 n，生成一个包含 1 到 n2 所有元素，且元素按顺时针顺序螺旋排列的正方形矩阵。
-
-示例:
+按大小顺序列出所有排列情况，并一一标记，当 n = 3 时, 所有排列如下：
 
 ```
-输入: 3
-输出:
-[
- [ 1, 2, 3 ],
- [ 8, 9, 4 ],
- [ 7, 6, 5 ]
-]
+"123"
+"132"
+"213"
+"231"
+"312"
+"321"
 ```
 
-## 回顾上一题
+给定 n 和 k，返回第 k 个排列。
 
-O(N^2)
+说明：
 
-之前的解法是，先把第一个填进结果。这次，我们直接遍历，但是把最后一个要记得放入数组
+给定 n 的范围是 [1, 9]。
+
+给定 k 的范围是[1,  n!]。
+
+示例 1:
+
+```
+输入: n = 3, k = 3
+输出: "213"
+```
+
+示例 2:
+
+```
+输入: n = 4, k = 9
+输出: "2314"
+```
+
+## DFS
+
+O(K * O(N)), 其中K = N!
+
+依次查找，直到找到第K个组合，然后返回
 
 ```python
 class Solution:
-    def spiralOrder(self, matrix: List[List[int]]) -> List[int]:
+    def getPermutation(self, n: int, k: int) -> str:
+        self.res = ''
+        self.count = 0
+        self.helper(n, k, '', set())
+        return self.res
+        
+    def helper(self, n: int, k: int, ans: str, visited: set) -> None:
 
-        if len(matrix) == 0 or len(matrix[0]) == 0:
-            return []
+        if self.count >= k:
+            return
         
-        n = len(matrix)
-        m = len(matrix[0])
+        if len(ans) == n:
+            self.count += 1
+            if self.count == k:
+                self.res = ans
+            return
         
-        x_directions = [0, 1, 0, -1]
-        y_directions = [1, 0, -1, 0]
-            
-        bounds = [0, m - 1, n - 1, 0]
-        shrink_bounds = [1, -1, -1, 1]
-            
-        res = []
-        x = y = 0
-            
-        while bounds[0] <= bounds[2] and bounds[3] <= bounds[1]:
-            for k in range(4):
-                while bounds[0] <= x + x_directions[k] <= bounds[2] and bounds[3] <= y + y_directions[k] <= bounds[1]:
-                    res.append(matrix[x][y])
-                    x += x_directions[k]
-                    y += y_directions[k]
+        for i in range(1, n + 1):
+            if i in visited:
+                continue
 
-                bounds[k] += shrink_bounds[k]
-        
-        res.append(matrix[x][y])
-        
-        return res
+            visited.add(i)
+            self.helper(n, k, ans + str(i), visited)
+            visited.remove(i)
 ```
 
-## 模拟法
+## 数学之美
 
-O(N^2)
-
-```python
-class Solution:
-    def generateMatrix(self, n: int) -> List[List[int]]:
-        res = [[0 for j in range(n)] for i in range(n)]
-            
-        x_directions = [0, 1, 0, -1]
-        y_directions = [1, 0, -1, 0]
-            
-        bounds = [0, n - 1, n - 1, 0]
-        shrink_bounds = [1, -1, -1, 1]
-            
-        x = y = 0
-        count = 1
-            
-        while bounds[0] <= bounds[2] and bounds[3] <= bounds[1]:
-            for k in range(4):
-                while bounds[0] <= x + x_directions[k] <= bounds[2] and bounds[3] <= y + y_directions[k] <= bounds[1]:
-                    res[x][y] = count
-                    x += x_directions[k]
-                    y += y_directions[k]
-                    count += 1
-                    
-                bounds[k] += shrink_bounds[k]
-        
-        res[x][y] = count
-        
-        return res
-```
-
---End--
+TBD
 
 来源：力扣（LeetCode）
 
-链接：https://leetcode-cn.com/problems/spiral-matrix-ii/
+链接：https://leetcode-cn.com/problems/permutation-sequence/
 
-Link：https://leetcode.com/problems/spiral-matrix-ii/
+Link：https://leetcode.com/problems/permutation-sequence/
