--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "力扣LeetCode-60. 第k个排列(Permutation Sequence)"
+title: "60. 第k个排列(Permutation Sequence)#力扣LeetCode#"
 categories: Leetcode
 tags: Math Backtracking
 excerpt: "Respect"
