--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -1,13 +1,15 @@
 ---
 layout: post
 title: "LeetCode-60.第k个排列(Permutation Sequence)"
-categories: Leetcode
+categories: LeetCode
 tags: Math Backtracking
-excerpt: "Respect"
+excerpt: "数学之美"
 ---
 
 * content
 {:toc}
+
+## 60. 第k个排列
 
 给出集合 [1,2,3,…,n]，其所有元素共有 n! 种排列。
 
