--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -88,4 +88,77 @@ class Solution:
 
 ## 数学之美
 
-TBD
+O(N^2)
+
+**N! = N * (N - 1)!**
+ 
+每组个数都是一致的，如果用k-1除以(N-1)的阶层，那么就知道第一个数落在哪个范围内
+
+k的余额 = index * (n - 1)!
+
+以n=3, k=3为例:
+
+```
+以1开头的有2!个:
+1 + [2, 3]
+1 + [3, 2]
+
+以2开头的有2!个:
+2 + [1, 3]
+2 + [3, 1]
+
+以3开头的有2!个:
+3 + [1, 2]
+3 + [2, 1]
+
+index = (k - 1) // (n - 1)! = (3 - 1) // 2! = 1
+以此类推，可以逐个确定每一位数字是什么
+```
+
+代码如下
+
+```python
+import math
+class Solution:
+    def getPermutation(self, n: int, k: int) -> str:
+        
+        numbers = [str(i + 1) for i in range(n)]
+        res = ''
+        
+        for i in range(n):
+            bucket = math.factorial(n - 1 - i)
+            
+            index = (k - 1) // bucket
+            k = k - index * bucket
+            
+            res += numbers[index]
+            numbers.pop(index)
+        
+        return res
+```
+
+PS: 计算阶层的时候可以从小到大计算，然后保存在数组中，作为查询表
+
+```python
+class Solution:
+    def getPermutation(self, n: int, k: int) -> str:
+                
+        lookup = [1 for i in range(n)]
+        for i in range(2, n):
+            lookup[i] = lookup[i - 1] * i
+        
+        numbers = [str(i + 1) for i in range(n)]
+        res = ''
+        for i in range(n):
+            bucket = lookup[n - 1 - i]
+            
+            index = (k - 1) // bucket
+            k = k - index * bucket
+            
+            res += numbers[index]
+            numbers.pop(index)
+        
+        return res
+```
+
+--End--
