--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -89,7 +89,7 @@ class Solution:
 ## 数学之美
 
 O(N^2)
-
+
 **N! = N * (N - 1)!**
  
 每组个数都是一致的，如果用k-1除以(N-1)的阶层，那么就知道第一个数落在哪个范围内
@@ -137,7 +137,7 @@ class Solution:
         return res
 ```
 
-PS: 计算阶层的时候可以从小到大计算，然后保存在数组中，作为查询表
+计算阶层的时候可以从小到大计算，然后保存在数组中，作为查询表
 
 ```python
 class Solution:
