--- a/_posts/leetcode/2020-07-06-leetcode-1.md
+++ b/_posts/leetcode/2020-07-06-leetcode-1.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "1. 两数之和(Two Sum)"
+title: "LeetCode-1.两数之和(Two Sum)"
 categories: Leetcode
 tags: Array Hash
-excerpt: "起航"
+excerpt: "起航，Great Voyage"
 ---
 
 * content
@@ -13,7 +13,7 @@ excerpt: "起航"
 
 一起起航吧，Great Voyage.
 
-## 1. Two Sum：
+## 1. 两数之和：
 
 给定一个整数数组 nums 和一个目标值 target，请你在该数组中找出和为目标值的那 两个 整数，并返回他们的数组下标。
 
@@ -26,6 +26,12 @@ excerpt: "起航"
 因为 nums[0] + nums[1] = 2 + 7 = 9
 所以返回 [0, 1]
 ```
+
+来源：力扣（LeetCode）
+
+链接：https://leetcode-cn.com/problems/two-sum/
+
+Link：https://leetcode.com/problems/two-sum/
 
 ### 哈希
 
