--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-60.第k个排列(Permutation Sequence)"
 categories: LeetCode
 tags: Math Backtracking
-excerpt: "数学之美"
+excerpt: "离司出走"
 ---
 
 * content
