Fix. 不一致的标签

--- a/_posts/leetcode/2020-09-27-leetcode-60.md
+++ b/_posts/leetcode/2020-09-27-leetcode-60.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "LeetCode-60.第k个排列(Permutation Sequence)"
-categories: LeetCode
+categories: Leetcode
 tags: Math Backtracking
 excerpt: "离司出走"
 ---
