--- a/_posts/leetcode/2020-10-05-leetcode-61.md
+++ b/_posts/leetcode/2020-10-05-leetcode-61.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "LeetCode-61.旋转链表(Rotate List)"
-categories: LeetCode
+categories: Leetcode
 tags: Linked-list Two-pointers
 excerpt: "峰回路转的绝望"
 ---
