--- a/_posts/leetcode/2020-10-05-leetcode-61.md
+++ b/_posts/leetcode/2020-10-05-leetcode-61.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-61.旋转链表(Rotate List)"
 categories: Leetcode
 tags: Linked-list Two-pointers
-excerpt: "峰回路转的绝望"
+excerpt: "马恩河战役"
 ---
 
 * content
@@ -43,5 +43,80 @@ excerpt: "峰回路转的绝望"
 
 Link：https://leetcode.com/problems/rotate-list/
 
+## 双指针
 
+找到最后**k+1**节点, 然后把两部分对调
+
+```
+1 -> 2 -> 3 -> 4 -> 5 -> None
+          ^         ^
+        start      end
+```
+
+### 循环访问
+
+O(N), N = MAX(链表长度, K)
+
+个人比较喜欢的解法，K过大会超时
+
+```python
+class Solution:
+    def rotateRight(self, head: ListNode, k: int) -> ListNode:
+        
+        newHead = ListNode()
+        newHead.next = head
+        
+        fast = slow = newHead
+        count = 0
+        
+        while fast.next is not None:
+            fast = fast.next
+            count += 1
+            
+            if count > k:
+                slow = slow.next
+            elif fast.next is None:
+                fast = newHead
+             
+        fast.next = head
+        newHead.next = slow.next
+        slow.next = None
+        
+        return newHead.next
+```
+
+### 先获取长度
+
+```python
+class Solution:
+    def rotateRight(self, head: ListNode, k: int) -> ListNode:
+        
+        if head is None:
+            return None
+        
+        length = 0
+        cur = head
+        while (cur is not None):
+            cur = cur.next
+            length += 1
+
+        step = k % length
+        slow = fast = head
+
+        count = 0
+        while(fast.next is not None):
+            fast = fast.next
+            count += 1
+            if count > step:
+                slow = slow.next
+
+        new_head = ListNode(0)
+        new_head.next = head
+
+        fast.next = head
+        new_head.next = slow.next
+        slow.next = None
+
+        return new_head.next
+```
 --End--
