--- a/_posts/leetcode/2020-07-08-leetcode-3.md
+++ b/_posts/leetcode/2020-07-08-leetcode-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "3. 无重复字符的最长子串(Longest Substring Without Repeating Characters)"
+title: "LeetCode-3.无重复字符的最长子串(Longest Substring Without Repeating Characters)"
 categories: Leetcode
 tags: Hash Two-pointers String Sliding-window
 excerpt: "滑动窗口"
@@ -9,7 +9,7 @@ excerpt: "滑动窗口"
 * content
 {:toc}
 
-## 3. Longest Substring Without Repeating Characters
+## 3. 无重复字符的最长子串
 
 给定一个字符串，请你找出其中不含有重复字符的 最长子串 的长度。
 
@@ -34,6 +34,12 @@ excerpt: "滑动窗口"
 解释: 因为无重复字符的最长子串是 "wke"，所以其长度为 3。
      请注意，你的答案必须是 子串 的长度，"pwke" 是一个子序列，不是子串。
 ```
+
+来源：力扣（LeetCode）
+
+链接：https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/submissions/
+
+Link：https://leetcode.com/problems/longest-substring-without-repeating-characters
 
 ## 双指针
 
@@ -122,5 +128,3 @@ public:
 ```
 
 --End--
-
-
