--- a/_posts/leetcode/2020-07-08-leetcode-3.md
+++ b/_posts/leetcode/2020-07-08-leetcode-3.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-3.无重复字符的最长子串(Longest Substring Without Repeating Characters)"
 categories: Leetcode
-tags: Hash Two-pointers String Sliding-window
+tags: Hash-table Two-pointers String Sliding-window
 excerpt: "滑动窗口"
 ---
 
