--- a/_posts/leetcode/2020-10-07-leetcode-63.md
+++ b/_posts/leetcode/2020-10-07-leetcode-63.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "LeetCode-63.不同路径 II(Unique Paths)"
+title: "LeetCode-63.不同路径 II(Unique Paths II)"
 categories: Leetcode
 tags: Array Dynamic-programming
-excerpt: ""
+excerpt: "Easy"
 ---
 
 * content
@@ -42,9 +42,73 @@ excerpt: ""
 
 来源：力扣（LeetCode）
 
-链接：https://leetcode-cn.com/problems/unique-paths-ii
+链接：https://leetcode-cn.com/problems/unique-paths-ii/
 
 Link：https://leetcode.com/problems/unique-paths-ii/
 
 ## 动态规划
 
+O(MN)
+
+最后一步，也就是终点，只能够从它的上边 or 左边到达
+
+```
+dp[x][y] = dp[x - 1][y] + dp[x][y - 1]
+```
+
+### 计算方向
+
+从左上到右下
+
+### 边界条件
+
+```
+dp[0][0] = 1
+
+top第一排:
+
+dp[0][y] = dp[0][y-1]
+
+left第一列
+dp[x][0] = dp[x-1][0]
+```
+
+### Follow Up
+
+如果遇到障碍物，那么无法通行，记作为0，表示无法走通
+
+代码如下:
+
+```python
+class Solution:
+    def uniquePathsWithObstacles(self, obstacleGrid: List[List[int]]) -> int:
+        
+        if len(obstacleGrid) == 0 or len(obstacleGrid[0]) == 0:
+            return 0
+        
+        m = len(obstacleGrid)
+        n = len(obstacleGrid[0])
+        
+        dp = [[0 for j in range(n)] for i in range(m)]
+        
+        for i in range(m):
+            for j in range(n):
+                if obstacleGrid[i][j] == 1:
+                    continue
+                
+                if i == 0 and j == 0:
+                    dp[i][j] = 1
+                    
+                elif i == 0:
+                    dp[i][j] = dp[i][j - 1]
+                    
+                elif j == 0:
+                    dp[i][j] = dp[i - 1][j]
+                    
+                else:
+                    dp[i][j] = dp[i - 1][j] + dp[i][j - 1]
+                    
+        return dp[-1][-1]
+```
+
+--End--
