--- a/_posts/leetcode/2020-07-09-leetcode-4.md
+++ b/_posts/leetcode/2020-07-09-leetcode-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "4. 寻找两个正序数组的中位数(Median of Two Sorted Arrays)"
+title: "LeetCode-4.寻找两个正序数组的中位数(Median of Two Sorted Arrays)"
 categories: Leetcode
 tags: Array Binary-search Divide-and-conquer
 excerpt: "我变秃了也变强了"
@@ -19,7 +19,7 @@ excerpt: "我变秃了也变强了"
 
 第二，两个数组，细节处理比较多
 
-## 4. Median of Two Sorted Arrays
+## 4. 寻找两个正序数组的中位数
 
 给定两个大小为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。
 
@@ -44,6 +44,12 @@ nums2 = [3, 4]
 
 则中位数是 (2 + 3)/2 = 2.5
 ```
+
+来源：力扣（LeetCode）
+
+链接：https://leetcode-cn.com/problems/median-of-two-sorted-arrays/
+
+Link：https://leetcode.com/problems/median-of-two-sorted-arrays/
 
 ### 暴力破解
 
