--- a/_posts/leetcode/2020-10-07-leetcode-63.md
+++ b/_posts/leetcode/2020-10-07-leetcode-63.md
@@ -50,6 +50,8 @@ Link：https://leetcode.com/problems/unique-paths-ii/
 
 O(MN)
 
+### 思考步骤
+
 最后一步，也就是终点，只能够从它的上边 or 左边到达
 
 ```
@@ -64,7 +66,6 @@ dp[x][y] = dp[x - 1][y] + dp[x][y - 1]
 
 ```
 dp[0][0] = 1
-
 top第一排:
 
 dp[0][y] = dp[0][y-1]
