add 力扣 65 part1

--- a/_posts/leetcode/2020-10-13-leetcode-65.md
+++ b/_posts/leetcode/2020-10-13-leetcode-65.md
@@ -50,6 +50,61 @@ Link：https://leetcode.com/problems/valid-number/
 
 ## 依次判断
 
+O(N)
+
+```python
+class Solution:
+    def isNumber(self, s: str) -> bool:
+        
+        s = s.strip()
+        
+        i = 0
+        
+        # 符号位
+        if i < len(s) and (s[i] == '+' or s[i] == '-'):
+            i += 1
+            
+        # 数字
+        point_count = 0
+        digit_count = 0
+        while i < len(s) and ('0' <= s[i] <= '9' or s[i] == '.'):
+            if s[i] == '.':
+                point_count += 1
+            else:
+                digit_count += 1
+                
+            i += 1
+                
+        if point_count > 1 or digit_count < 1:
+            return False
+        
+        # 指数位
+        if i < len(s) and s[i] == 'e':
+            i += 1
+            
+            if i < len(s) and (s[i] == '+' or s[i] == '-'):
+                i += 1
+                
+            digit_count = 0
+            while i < len(s) and '0' <= s[i] <= '9':
+                digit_count += 1
+                i += 1
+                
+            if digit_count < 1:
+                return False
+            
+        return i == len(s)
+```
+
+## 正则表达式
+
+```python
+import re
+class Solution:
+    def isNumber(self, s: str) -> bool:
+        return re.search(r'^\s*[+-]?(\d+(\.\d*)?|\.\d+)(e[+-]?\d+)?\s*$', s)
+```
+
 ## 有限自动机
 
 
